[gd_scene load_steps=12 format=3 uid="uid://dktfvmvslt1bw"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_ky80x"]
[ext_resource type="Texture2D" uid="uid://d0qpvitow61l2" path="res://assets/characters/slime.png" id="1_yljvo"]
[ext_resource type="PackedScene" uid="uid://dn2j5bhb4kkhs" path="res://scenes/components/progress_bar.tscn" id="2_xdvca"]
[ext_resource type="AudioStream" uid="uid://j6s4i4okpa81" path="res://assets/musics/muddy-boots-99967.mp3" id="4_akmcl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwcqn"]
size = Vector2(23, 21)

[sub_resource type="Animation" id="Animation_g7s0t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_d2qih"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_vdb15"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_v8805"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_crcgs"]
_data = {
"RESET": SubResource("Animation_g7s0t"),
"death": SubResource("Animation_d2qih"),
"idle": SubResource("Animation_vdb15"),
"walk": SubResource("Animation_v8805")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_u5vsc"]
radius = 112.009

[node name="Slime" type="CharacterBody2D" node_paths=PackedStringArray("_texture", "_animation_player") groups=["enemy"]]
script = ExtResource("1_ky80x")
_texture = NodePath("Texture")
_animation_player = NodePath("Animation")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_dwcqn")

[node name="Texture" type="Sprite2D" parent="."]
texture = ExtResource("1_yljvo")
hframes = 7
vframes = 5

[node name="ProgressBar" parent="." instance=ExtResource("2_xdvca")]
offset_left = -16.0
offset_top = -13.0
offset_right = 16.0
offset_bottom = 27.0

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_crcgs")
}

[node name="DetectionArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_u5vsc")

[node name="AttackTimer" type="Timer" parent="."]

[node name="AttackAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_akmcl")

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
